devtools/laymos/test/fixtures/story-ejection/invalid/dynamic-decision-key.ts
import { decision, exhaustive, when } from 'laymos/story';

export const value = decision('Choice', {}, input).pipe(
  when(key, {}, () => effect),
  exhaustive,
);
